# LetouMe

./: .env.dev  .env.example  .env.prod  .gitignore  README.md  README.zh-CN.md  demo.xlsx  dlt_index.html  index.html  letoume.db  pyproject.toml  requirements.txt  settings.html  start_dev.bat  start_dev.sh  start_prod.bat  start_prod.sh  start_server.bat  start_server.sh  命中趋势折线_20260420_162513.csv
.mindfs/sessions/: session-list.db
app/: config.py  main.py
app/api/: routes.py
app/db/: connection.py  schema.py
app/repositories/: lottery_repository.py  model_repository.py  prediction_repository.py  write_log_repository.py
app/schemas/: model_settings.py  responses.py
app/services/: lottery_service.py  model_service.py  prediction_service.py
backend/: letoume.db
backend/app/: auth.py  cache.py  config.py  dlt_rules.py  lotteries.py  (+5 more)
config/: models.json
core/: model_config.py  model_factory.py
data/: dlt_ai_predictions.json  dlt_data.json  dlt_predictions_history.json  ssq_ai_predictions.json  ssq_history.json  ssq_predictions_history.json
deploy/: baota_nginx.conf
doc/: WEIGHT_LOGIC.md
fetch_history/: dlt_data.json  fetch_dlt_history.py  fetch_ssq_history.py  ssq_data.json
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
mobile_app/: .gitignore  README.md  pubspec.yaml
predict/: dlt_engine.py  dlt_generate_ai_prediction.py  ssq_generate_ai_prediction.py
scripts/: dlt_recalculate_history_predictions.py  migrate_json_to_db.py  restore_mysql_to_sqlite.py  restore_postgres_predictions_to_sqlite.py
(+305 files in other folders)
