[project]
name = "letoume"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "cryptography>=42.0.0",
    "fastapi>=0.116.1",
    "openai>=2.26.0",
    "pymysql>=1.1.1",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
    "tzdata>=2025.3"
]
